test/tests/operators/match/error_non_last_wildcard.txt
error: wildcard match arm must be last
 --> tests/operators/match/error_non_last_wildcard.tql:7:3
  |
7 |   _ => {
  |   ^ 
  |
